<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_page"
        android:title="Поиск"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/top_page"
        android:title="Топ фильмов"
        android:icon="@drawable/ic_baseline_new_releases_24"/>

    <item
        android:id="@+id/my_films_page"
        android:title="Мои фильмы"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"/>
</menu>