...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@{film.nameRu}"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
                    app:layout_constraintStart_toEndOf="@+id/film_poster"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/bookmark_button"
                    android:layout_width="wrap_content"
...
